# flbwt

./: .gitignore  .gitmodules  .travis  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake.yml
examples/: CMakeLists.txt  bwt.cpp
include/: bucket.hpp  bucket_map.hpp  container.hpp  flbwt.h  flbwt.hpp  hashtable.hpp  induce.hpp  induce32bit.hpp  induce40bit.hpp  induce48bit.hpp  induce56bit.hpp  induce64bit.hpp  packed_array.hpp  queue.hpp  sais.hpp  sais32bit.hpp  sais40bit.hpp  sais48bit.hpp  sais56bit.hpp  sais64bit.hpp  sequence.hpp  substring.hpp  utility.h  utility.hpp
lib/: CMakeLists.txt
src/: bucket.cpp  bucket_map.cpp  container.cpp  flbwt.c  flbwt.cpp  hashtable.cpp  induce.cpp  induce32bit.cpp  induce40bit.cpp  induce48bit.cpp  induce56bit.cpp  induce64bit.cpp  packed_array.cpp  queue.cpp  sais.cpp  sais32bit.cpp  sais40bit.cpp  sais48bit.cpp  sais56bit.cpp  sais64bit.cpp  sequence.cpp  utility.c  utility.cpp
test/: CMakeLists.txt  bucket_map_test.cpp  bucket_test.cpp  flbwt_test.cpp  hashtable_test.cpp  packed_array_test.cpp  sais40bit_test.cpp  sais_test.cpp  sequence_test.cpp  utitily_test.cpp
